refactored enhancing and re-engineering decisions, started adding concepts

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -81,6 +81,27 @@
 # CIVICS replaces
 # ------------------------------------------------------------
 # Regular empire
+# Ruler Civic
+
+ civic_technocracy:0 "Technocracy"
+ civic_technocracy_desc:0 "['concept_tec_ruler_civic']\n\nTo maximize efficiency, this society is governed according to the principles of science and rationality. The personal whims of an ignorant and dangerously unqualified political elite must not be allowed to interfere."
+ civic_tooltip_technocracy_new_effects:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_tec_technocrat£ §Y$job_tec_technocrat_plural$§!.\n- $job_tec_technocrat_effect_desc$\n\n"
+
+
+ civic_exalted_priesthood: "Exalted Priesthood"
+ civic_exalted_priesthood_desc:0 "['concept_tec_ruler_civic']\n\nReligious leaders pre-occupy administrative positions, in order to guard society against heresy and decadence."
+ civic_tooltip_exalted_priesthood_effects:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_high_priest£ §YHigh Priest§!\n£building£ Buildings §YSacred Nexus§! and §YCitadel of Faith§! provide additional £job_high_priest£ §YHigh Priest§! jobs.\n- $job_high_priest_effect_desc$.\n" 
+
+ civic_aristocratic_elite:0 "Patrimonial Aristocracy"
+ civic_aristocratic_elite_desc:1 "['concept_tec_ruler_civic']\n\nThis society has an entrenched nobility that occupies the upper echelons of society, ensuring its stability as a selfish form of self-preservation of their interests."
+ civic_tooltip_aristocratic_elite_effects:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_noble£ §Y$job_noble_plural$§!\n- $job_noble_effect_desc$.\n\nCan construct £building£ §Y$building_noble_estates$§! buildings that add additional £job_noble£ §Y$job_noble$§! and £job_slave_toiler£ $job_tec_peasant_plural$ Jobs\nGrants access to the £building£ §Y$holding_noble_vacation_homes$§! Holding\n\n"
+
+ civic_merchant_guilds:0 "Corporatocracy"
+ civic_merchant_guilds_desc:2 "['concept_tec_ruler_civic']\n\nA number of wealthy Corporations dominates in this society, with Oligarchs holding significant sway with the government and controlling who works, and where, while having the approval of the ruling class." 
+ civic_tooltip_tec_merchant_guilds_effects:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_mogul£\n- $job_mogul_effect_desc$\n\n£building£ §YGalactic Stock Exchange§! provide £job_mogul£ §Y$job_mogul$§! Ruler Jobs.\nCan't use §YPublic Healthcare§! or §YPublic Education§! policies.\n\nAllows the creation of §YTrade Federations§! if the basic federation creation requirements are met.\n\n" 
+
+# rest
+
  civic_imperial_cult:0 "Imperial Cult"
  civic_imperial_cult_desc:0 "This society has a dominant state religion where the ruler is worshiped as a living deity, and all the people serve the desires and design of this paradigm of faith."
  civic_tooltip_imperial_cult_effects:0 "§R£trigger_tec_warning_red£ EFFECT NOT READY§!\n\nThe empire ruler starts with the §YGod Emperor§! trait, which will grow in power each §Y10§! years.\nBased on the empire §Yfoundation§!, several events and additional resources will be available for increasing, protecting and harnessing the power and lifespan of the God Emperor.\n\n§H£trigger_tec_warning£ The effects of this civic are altered depending on the Ascension Path taken.§!\n\n"
@@ -89,9 +110,6 @@
  civic_beacon_of_liberty_desc:0 "Free flow of people, trade goods and innovations. This society glorifies the idea of individual liberty to exercise one's initiatives and completely fulfill his goals and ambitions. " 
  civic_tooltip_beacon_of_liberty_effects:0 "Starts game with §YPrivate Colony Ships§!.\nCan't use §HPlanned§! economies and §HCommon Good§! trade policy.\n§YResettlement§! and §YPopulation Control§! are not allowed.\n\n"
 
- civic_exalted_priesthood: "Exalted Priesthood"
- civic_exalted_priesthood_desc:0 "Religious leaders pre-occupy administrative positions, in order to guard society against heresy and decadence."
- civic_tooltip_exalted_priesthood_effects:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_high_priest£ §YHigh Priest§!\n£building£ Buildings §YSacred Nexus§! and §YCitadel of Faith§! provide additional £job_high_priest£ §YHigh Priest§! jobs.\n- $job_high_priest_effect_desc$.\n" 
 
  civic_philosopher_king:1 "Rule of Sages" 
 
@@ -102,7 +120,6 @@
  civic_citizen_service_desc:0 "Full citizenship and the political responsibility that comes with it is limited to those who have served a tour of duty in the military. Service guarantees citizenship and rights to elect and govern." 
  civic_tooltip_citizen_service_effects:0 "§YPersonal Weapons§! can't be banned.\nGrants access to the £building£ §Y$holding_recruitment_office$§! Holding.\n"
 
- civic_tooltip_technocracy_new_effects:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_tec_technocrat£ §Y$job_tec_technocrat_plural$§!.\n- $job_tec_technocrat_effect_desc$\n\n"
 
  civic_feudal_realm:0 "Feudalism"
  civic_feudal_realm_desc:0 "This society is organized in a feudal manner, with a monarch whose rule relies on powerful vassals that govern their territories with considerable autonomy."
@@ -115,8 +132,8 @@
  civic_tooltip_idealistic_foundation_effects:0 "All factions produce a small amount of £influence£ §YInfluence§!.\n\n"
 
  civic_environmentalist:0 "Environmentalism"
- civic_environmentalist_desc:0 "The economy of this Civilization is shaped in accordance with the problems of maximizing the industrial efficiency and usage of natural resources. \n"
- civic_tooltip_environmentalist_effects:0 "Benefits from clearable £blocker£ §YBlockers§!, which provides them with some £housing£ §YHousing§! and worker jobs, like £job_miner£ §YMiners§! (from §YMountain Range§!), £job_technician£ §YTechnicians§! (from §YActive Volcano§!), £job_farmer£ §YFarmer§! (from §YDense Jungle§!) and so on.\nClearing deposits will add special planet deposits giving §Yadditional Jobs§! and §Hspecial bonuses§!.\nCan't use §HReduced Environmental Regulation§! policy.\n\nGrants access to the £building£ §Y$holding_park_ranger_lodge$§! Holding.\n"
+ civic_environmentalist_desc:0 "['concept_tec_terraformer_civic']\n\nThe economy of this Civilization is shaped in accordance with the problems of maximizing the industrial efficiency and usage of natural resources. \n"
+ civic_tooltip_environmentalist_effects:0 "$tec_access_environment_enhance_decision$\n$tec_access_environment_preserve_decision$\nBenefits from clearable £blocker£ §YBlockers§!, which provides them with some £housing£ §YHousing§! and worker jobs, like £job_miner£ §YMiners§! (from §YMountain Range§!), £job_technician£ §YTechnicians§! (from §YActive Volcano§!), £job_farmer£ §YFarmer§! (from §YDense Jungle§!) and so on.\nClearing deposits will add special planet deposits giving §Yadditional Jobs§! and §Hspecial bonuses§!.\nCan't use §HReduced Environmental Regulation§! policy.\n\nGrants access to the £building£ §Y$holding_park_ranger_lodge$§! Holding.\n"
 
  civic_slaver_guilds_desc:0 "A number of powerful and ruthless slaver guilds dominates the economy. Private enterprises traditionally rely on slave labor force, and they know how to get the profits out of it."
  civic_tooltip_slaver_guilds_effects:0 "Allows to set §YEnslavement Rate§! policy, from §G+25%§! to §G+40%§!\n\n"
@@ -168,17 +185,9 @@
 
  civic_tooltip_nationalistic_zeal_effects:0 "The §YSupremacist§! faction will produce §Y4§! times more additional £unity£ §YUnity§! while at war .\n\n"
 
- civic_aristocratic_elite:0 "Patrimonial Aristocracy"
- civic_aristocratic_elite_desc:1 "This society has an entrenched nobility that occupies the upper echelons of society, ensuring its stability as a selfish form of self-preservation of their interests."
- civic_tooltip_aristocratic_elite_effects:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_noble£ §Y$job_noble_plural$§!\n- $job_noble_effect_desc$.\n\nCan construct £building£ §Y$building_noble_estates$§! buildings that add additional £job_noble£ §Y$job_noble$§! and £job_slave_toiler£ $job_tec_peasant_plural$ Jobs\nGrants access to the £building£ §Y$holding_noble_vacation_homes$§! Holding\n\n"
-
  civic_tooltip_byzantine_bureaucracy_effects:2 "£building£ Administrative buildings produce §G2§! extra £amenities£ §YAmenities§! per building level.\n$tec_loc_stability$ from £job_bureaucrat£ $job_bureaucrat_plural$: §G+1§!\n" 
 
  civic_tooltip_shared_burden_effects:3 "Allows §Y$living_standard_shared_burden$§! Living Standard, under which all £pop£ Pops have moderate £consumer_goods£ §Y$consumer_goods$§! Upkeep regardless of §YStrata§!\nDisables the use of most other §YLiving Standards§!\nGrants access to the £building£ §Y$holding_communal_housing_outreach$§! Holding\n$tec_loc_amenities$ from £job_clerk£ $job_clerk_plural$: §G+1§!"
-
- civic_merchant_guilds:0 "Corporatocracy"
- civic_merchant_guilds_desc:2 "A number of wealthy Corporations dominates in this society, with Oligarchs holding significant sway with the government and controlling who works, and where, while having the approval of the ruling class." 
- civic_tooltip_tec_merchant_guilds_effects:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_mogul£\n- $job_mogul_effect_desc$\n\n£building£ §YGalactic Stock Exchange§! provide £job_mogul£ §Y$job_mogul$§! Ruler Jobs.\nCan't use §YPublic Healthcare§! or §YPublic Education§! policies.\n\nAllows the creation of §YTrade Federations§! if the basic federation creation requirements are met.\n\n" 
 
  civic_tooltip_diplomatic_corps_effects:0 "§R£trigger_tec_warning_red£ EFFECT NOT READY§!\n\n§YManipulation§! espionage actions have a §G25%§! extra chance of success.\n\n"
 
@@ -192,15 +201,16 @@
 
  civic_tooltip_crafters_effects:0 "£job_artisan£ §Y$job_artisan_plural$§! are replaced with £job_artisan£ §Y$job_artificer_plural$§!.\n§Y$job_artificer_plural$§! produce §G+1§! £consumer_goods£ §Y$consumer_goods$§! as well as §Y2§! £trade_value£ §YTrade Value§!.\nEvery §Y3§! §HIndustrial Districts§! grant §G1§! £building£ §YBuilding Slot§! on regular planets.\n\n§HVoid-Dweller empires benefits from this effect on Habitats.§!"
 
- civic_tooltip_anglers_effects:1 "On §Y(Wet Climate)§! worlds, §HAgriculture Districts§! are replaced by §HSeafarm Districts§!.\n£district£ Seafarm Districts are uncapped, cost §Y50§! less £minerals£ Minerals on §HOcean§! or §HPerfect§! Worlds and provide £job_angler£ §Y$job_angler_plural$§! and £job_pearl_diver£ §Y$job_pearl_diver_plural$§!.\n§Y$job_angler_plural$§! produce §Y8§! £food£ §Y$food$§! and §Y2§! £trade_value£ §Y$TRADE_VALUE$§!, and §Y$job_pearl_diver_plural$§! produce §Y6§! £consumer_goods£ §Y$consumer_goods$§! and §Y2§! £trade_value£ §Y$TRADE_VALUE$§!.\nAdds the §H$trait_aquatic$§! trait.\n\nWith the §YHydrocentric§! you can flood specific planet types depending on your origin."
+ civic_anglers_desc:0 "['concept_tec_climate_civic']\n\nAdept at utilizing nature's bounty, this society provides for itself a stable influx of sustenance and economic value."
+ civic_tooltip_anglers_effects:1 "On §Y(Wet Climate)§! worlds, §HAgriculture Districts§! are replaced by §HSeafarm Districts§!.\n£district£ Seafarm Districts are uncapped, cost §Y50§! less £minerals£ Minerals on §HOcean§! or §HPerfect§! Worlds and provide ['concept_tec_job_anglers_icon'] and ['concept_tec_job_pearl_divers_icon'].\nAdds the §H$trait_aquatic$§! trait.\n\nWith the §YHydrocentric§! you can flood specific planet types depending on your origin."
 
  civic_tec_anglers_lithoid:0 "Reef Carers"
- civic_tec_anglers_lithoid_desc:0 "Adept at utilizing natural reefs and rich oceanic soil, this society provides for itself a stable influx of sustenance and economic value."
+ civic_tec_anglers_lithoid_desc:0 "['concept_tec_climate_civic']\n\nAdept at utilizing natural reefs and rich oceanic soil, this society provides for itself a stable influx of sustenance and economic value."
 
  civic_tec_corporate_anglers_lithoid:0 "$civic_tec_anglers_lithoid$"
  civic_tec_corporate_anglers_lithoid_desc:0 "$civic_tec_anglers_lithoid_desc$"
 
- civic_tooltip_tec_anglers_lithoid_effects:1 "On §Y(Wet Climate)§! worlds, §HMining Districts§! are replaced by §HPetro-Reef Districts§!.\n§HPetro-Reef Districts§! are uncapped, cost §Y50§! less £minerals£ Minerals on §HOcean§! or §HPerfect§! Worlds, and provide £job_tec_reef_miner£ §Y$job_tec_reef_miner_plural$§! and £job_pearl_diver£ §Y$job_pearl_diver_plural$§!.\n§Y$job_tec_reef_miner_plural$§! produce §Y8§! £minerals£ §Y$minerals$§! and §Y2§! £trade_value£ §Y$TRADE_VALUE$§!, and §Y$job_pearl_diver_plural$§! produce §Y6§! £consumer_goods£ §Y$consumer_goods$§! and §Y2§! £trade_value£ §Y$TRADE_VALUE$§!.\nAdds the §H$trait_aquatic$§! trait.\n\nWith the §YHydrocentric§! you can flood specific planet types depending on your origin."
+ civic_tooltip_tec_anglers_lithoid_effects:1 "On §Y(Wet Climate)§! worlds, §HMining Districts§! are replaced by §HPetro-Reef Districts§!.\n§HPetro-Reef Districts§! are uncapped, cost §Y50§! less £minerals£ Minerals on §HOcean§! or §HPerfect§! Worlds, and provide ['concept_tec_tec_reef_miners_icon'] and ['concept_tec_job_pearl_divers_lithoid_icon'].\nAdds the §H$trait_aquatic$§! trait.\n\nWith the §YHydrocentric§! you can flood specific planet types depending on your origin."
 # nuked
  civic_tec_anglers_nuked:0 "$civic_anglers$"
  civic_tec_anglers_nuked_desc:0 "$civic_anglers_desc$"
@@ -373,6 +383,10 @@
  tec_cw_coop_bonus_desc:0 ", §Y$mod_pop_job_amenities_mult$§!"
  tec_cw_eli_bonus_desc:0 ", §Y£pop_cat_specialist£ $mod_pop_cat_specialist_political_power$§!"
  tec_cw_ega_bonus_desc:0 ", §Y£stability£ $MOD_PLANET_STABILITY_ADD$§!"
+
+ civic_death_cult_desc:0 "['concept_tec_main_cult_civic']\n\nThis society's religion is built around periodic, ritual sacrifice. Willing initiates devote themselves to a decade of study before meeting an end whose effects ripple throughout their culture."
+ civic_death_cult_corporate_desc:0 "['concept_tec_main_cult_civic']\n\nThis Megacorporation has embraced ritual sacrifice as a means of ensuring its continuing profits. Willing initiates periodically give their lives in hopes of good fortune for their society."
+
 
  job_death_chronicler_effect_desc:1 "£job_death_chronicler£ $job_death_chronicler_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £unity£ §Y$unity$§!$tec_culture_worker_cleanup$ and £stability£ §YStability§!"
  job_death_chronicler_effect_desc_civic:1 "£job_death_chronicler£ $job_death_chronicler_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £unity£ §Y$unity$§!, bonuses based on the empire §YEthics§! and £stability£ §YStability§!"
