--- a/localisation/english/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/zz_evolved_ethics_authorities_l_english.yml
@@ -160,14 +160,14 @@ TEC_ETHIC_DISALLOW_AI:0 "§ECannot use §HFull AI Rights§! policy, unless certa
 #green bonus
 TEC_ETHIC_ALLOWS_FOOD_CG:0 "§EAllows §HEcological§! £consumer_goods£ Consumer Goods §Hpolicy option§!§!"
 TEC_ETHIC_NOT_ALLOWS_FOOD_CG:0 "§ECannot use §HIndustrial§! £consumer_goods£ Consumer Goods §Hpolicy option§!§!"
-TEC_FREE_ECOWORLDS:0 "§ECan create §HEcoworlds§! without requiring §HMastery of Nature§! ascension perk.§!"
-TEC_FORBIDS_ECUMENOPOLIS:0 "§ECannot create §HEcumenopoleis§!.§!"
+TEC_FREE_ECOWORLDS:0 "§ECan create ['concept_tec_ecoworlds'] without requiring §HMastery of Nature§! ascension perk.§!"
+TEC_FORBIDS_ECUMENOPOLIS:0 "§ECannot create ['concept_tec_ecumenopoleis'].§!"
 
 #Industrial
 TEC_ETHIC_ALLOWS_MINING_SUB:0 "§EAllows §HMining Subsidizing§! £trade_value£ trade §Hpolicy§! option§!"
 TEC_CHEAPER_ECUMENOPOLIS:0 "§E§HArcology project§! decision has a §Ylower§! £influence£ Influence cost.§!"
 TEC_FREE_ECUMENOPOLIS:0 "§E§HArcology project§! decision has §Yhalf§! the regular £influence£ Influence cost.§!"
-TEC_FORBIDS_ECOWORLDS:0 "§ECannot create §HEcoworlds§!.§!"
+TEC_FORBIDS_ECOWORLDS:0 "§ECannot create ['concept_tec_ecoworlds'].§!"
 
 #Materialist bonus
 TEC_ETHIC_ALLOWS_SCIENCE_DIV:0 "§EAllows £trigger_tec_research£ §HResearch focus§! policy§!"
@@ -258,7 +258,7 @@ GESTALT_ETHIC_ALLOWS_LETMEALONE:0 "§EMost of the diplomatic actions are not ava
 # "§EThis empire can't engage in basic or advanced diplomacy.§!"
 
 #Eco
-GESTALT_ETHIC_ALLOWS_NATURALIZATION:0 "§EAllows §HPlanet Enhancing§! Decisions§!"
+GESTALT_ETHIC_ALLOWS_NATURALIZATION:0 "§EActs as a ['concept_tec_terraformer_civic'], giving access to ['concept_tec_environment_enhance_icon'] and ['concept_tec_environment_preserve_icon'] decisions§!"
 GESTALT_ETHIC_ALLOWS_WORLD_SHAPER:0 "§EAllows §HWorld Shaper§! Ascension Perk§!"
 #Industry
 GESTALT_ETHIC_ALLOWS_STRIPMINING:0 "§EAllows §HOverstripping§! Decisions on planets§!"
