--- a/localisation/english/zz_evolved_decisions_l_english.yml
+++ b/localisation/english/zz_evolved_decisions_l_english.yml
@@ -20,34 +20,29 @@ decision_tec_environment_fix:0 "Environmental Restoration"
  decision_tec_environment_fix_effects:0 "Allows to reform the planetary anomalies, like: §YUnstable Tectonics§!, §YWeak Magnetic Field§!, §YTidal Locked§!, §YIrradiated Planet§!, §YDamaged Ecology§!, §YWasteland Radiation§!, §YAbandoned Terraforming§!, etc."
  decision_tec_environment_fix_effects_short:0 "Allows to reform the planetary anomalies, like: §YUnstable Tectonics§!, §YWeak Magnetic Field§!, §YTidal Locked§!, §YIrradiated Planet§!, §YDamaged Ecology§!, §YWasteland Radiation§!, §YAbandoned Terraforming§!, etc."
  decision_tec_environment_fix_desc:0 "With our capacities, we will reform all this planet has to offer to suit our designs, while keeping nature and the environment preserved."
- decision_tec_environment_fix.tooltip:0 "Environmental Restoration"
 
  #keeper
  decision_tec_environment_harmony:0 "Environmental Harmony"
  decision_tec_environment_harmony_effects:0 "Allows to reform the planetary anomalies, like: §YUnstable Tectonics§!, §YWeak Magnetic Field§!, §YTidal Locked§!, §YIrradiated Planet§!, §YDamaged Ecology§!, §YWasteland Radiation§!, §YAbandoned Terraforming§!."
  decision_tec_environment_harmony_effects_short:0 "Allows to reform the planetary anomalies, like: §YUnstable Tectonics§!, §YWeak Magnetic Field§!, §YTidal Locked§!, §YIrradiated Planet§!, §YDamaged Ecology§!, §YWasteland Radiation§!, §YAbandoned Terraforming§!."
  decision_tec_environment_harmony_desc:0 "This planet is suffering, and we think we can amend it."
- decision_tec_environment_harmony.tooltip:0 "Environmental Harmony"
 
 #Environmentalist
  decision_tec_environment_preserve:0 "Environmental Preservation"
  decision_tec_environment_preserve_effects:0 "Allows to eradicate the following planetary anomalies: §YDangerous Wildlife§!, §YBleak§!, §YHazardous Weather§!, §YWild Storms§!, etc."
- decision_tec_environment_preserve_desc:0 "This planet has valuable resources we must protect, from which we can substainabily benefit, so we should repair it."
- decision_tec_environment_preserve.tooltip:0 "Environmental Preservation"
+ decision_tec_environment_preserve_desc:0 "This planet has valuable resources we must protect, from which we can sustainably benefit, so we should repair it."
 
 
 
  decision_tec_environment_enhance:0 "Enhance Planet"
- decision_tec_environment_preserve_effects:0 "Adds valuable deposits to this perfect planet, based on the §YEmpire civics§! and §YPlanet class§!; A §GPerfect world§!, like a Gaia World, gain between 4 special deposits, depending on what deposits they had before and the owner active civics, while a §YPerfect Arcology§! gain two unique deposits."
  decision_tec_environment_enhance_desc:0 "This world has reached perfection, but we can make it even better"
- decision_tec_environment_enhance.tooltip:0 "Adds valuable deposits to this perfect planet, based on the §YEmpire civics§! and §YPlanet class§!; A §GPerfect world§!, like a Gaia World, gain between 4 special deposits, depending on what deposits they had before and the owner active civics, while a §YPerfect Arcology§! gain two unique deposits."
+ decision_tec_environment_enhance_effect:0 "Adds valuable deposits to this planet, based on the §YEmpire Civics§! and §YPlanet Class§!.\n\n['concept_tec_environment_enhance_breakdown', Effect Breakdown]\n\n"
 
 
 
  decision_tec_environment_engineers:0 "Arcology Re-Engineering"
- decision_tec_environment_engineers_effects:0 "Adds valuable deposits to this designed arcology, based on the §YEmpire civics§! and §YPlanet class§!; An §GHabitat§! gain between 2 and 4 special deposits, depending on some conditions, like owner active civics, while a §YRingworld section§! or §YElysian ring§!gain two unique deposits."
  decision_tec_environment_engineers_desc:0 "We crafted all this world with our intelligent design, and we can improve it even more."
- decision_tec_environment_engineers.tooltip:0 "Adds valuable deposits to this designed arcology, based on the §YEmpire civics§! and §YPlanet class§!; An §GHabitat§! gain between 2 and 4 special deposits, depending on some conditions, like owner active civics, while a §YRingworld section§! or §YElysian ring§! gain two unique deposits."
+ decision_tec_environment_engineers_effects:0 "Adds valuable deposits to this designed space arcology, based on the §YEmpire Civics§! and §YPlanet Class§!.\n\n['concept_tec_environment_engineers_breakdown', Effect Breakdown]\n\n"
 
 
 # - - - - - - - - - - - - - - - - - - - - - #
@@ -103,10 +98,10 @@ decision_tec_environment_fix:0 "Environmental Restoration"
 # Eco-world
 
 
- allow_ecoworld_project:0 "§HUnlocks Decision:§! $decision_tec_ecoworld_project$"
+ allow_ecoworld_project:0 "§HUnlocks Decision:§! ['concept_tec_ecoworld_project']"
 
- decision_tec_ecoworld_project:0 "§YEcoworld project§!"
- decision_tec_ecoworld_project_effects:1 "Turns the planet into an §YEco-World§!, increasing £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§! and unlocking special £district£ §YEco-Arcology Districts§! respecting the planet's natural resources, being advanced versions of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!.\n\n§RWarning: Terraforming or Arcology-encasing this world after the §YEcoworld project§! has been done will undo the process, making the bonuses, and the associated districts, disappear.§!"
+ decision_tec_ecoworld_project:0 "Ecoworld Project"
+ decision_tec_ecoworld_project_effects:1 "Turns the planet into an ['concept_tec_ecoworld'], increasing £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§! and unlocking special £district£ §YEco-Arcology Districts§! respecting the planet's natural resources, being advanced versions of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!.\n\n§RWarning: Terraforming or Arcology-encasing this world after the §YEcoworld project§! has been done will undo the process, making the bonuses, and the associated districts, disappear.§!"
  decision_tec_ecoworld_project_effects_short:2 "Increases £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YResource Production§! and §YPop Growth§!\nEnables £district£ §YArcology Districts§!\nDisables construction of £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§!"
  decision_tec_ecoworld_project_requirements:0 "£trigger_no£ §RThe planet must have one completely filled £trigger_tec_basic_resources£ Basic Resource £district£ §YDistrict type§! (with a minimum of 6 built districts, or 9 for §Huncapped§! versions), and all £blocker£ §YPlanetary Blockers§! cleared.§!"
 # decision_tec_ecoworld_project_requirements:0 "£trigger_no£ §RThe planet must have, at least, 15 available districts, and a total amount of 6 §! §Y$district_city_plural$§! and 3 of each §! §Y$district_generator_plural$§!, §! §Y$district_mining_plural$§! and §! §Y$district_farming_plural$§! built."
