Fixed some loc in the angler job concepts

--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -111,7 +111,7 @@ concept_tec_job_angler: "$job_angler$"
 concept_tec_job_angler_icon: "£job_angler£ $job_angler$"
 concept_tec_job_anglers: "$job_angler_plural$"
 concept_tec_job_anglers_icon: "£job_angler£ $job_angler_plural$"
-concept_tec_job_angler_desc: "Stratum: §Y$pop_cat_worker$§!\nTrade Value: §G+2§!\nProduces: §Y$food$ 8§!" 
+concept_tec_job_angler_desc: "Stratum: §Y$pop_cat_worker$§!\nTrade Value: §G+2§!\nProduces: §Y£food£ 8§!" 
 
 concept_tec_tec_reef_miner: "$tec_reef_miner$"
 concept_tec_tec_reef_miner_icon: "£job_tec_reef_miner£ $tec_reef_miner$"
@@ -123,7 +123,7 @@ concept_tec_job_pearl_diver: "$job_pearl_diver$"
 concept_tec_job_pearl_diver_icon: "£job_pearl_diver£ $job_pearl_diver$"
 concept_tec_job_pearl_divers: "$job_pearl_diver_plural$"
 concept_tec_job_pearl_divers_icon: "£job_pearl_diver£ $job_pearl_diver_plural$"
-concept_tec_job_pearl_diver_desc: "Stratum: §Y$pop_cat_specialist$§!\nTrade Value: §G+2§!\nProduces: §Y$consumer_goods$ 6§!\nUpkeep: §Y£minerals£ 4 £food£ 3§!"
+concept_tec_job_pearl_diver_desc: "Stratum: §Y$pop_cat_specialist$§!\nTrade Value: §G+2§!\nProduces: §Y£consumer_goods£ 6§!\nUpkeep: §Y£minerals£ 4 £food£ 3§!"
 
 concept_tec_job_pearl_diver_lithoid: "$job_pearl_diver$"
 concept_tec_job_pearl_diver_lithoid_icon: "£job_pearl_diver£ $job_pearl_diver$"
