--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -81,12 +81,34 @@
 		#INDIVIDUAL:
 		#- Egalitarian
 		#	> Faction resource gain +25-50%
-		TEC_ETHIC_EGALITARIAN_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HTO DO§! Policy, allowing a \n\n"
+		TEC_ETHIC_EGALITARIAN_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HTO DO§! Policy, altering the bonuses of some living standards\n\n"
 		TEC_ETHIC_EGALITARIAN_MECHANIC:0 "§EMechanic Bonus:§! TO DO\n\n"
+
+		policy_tec_egalitarian_ethic:0 "TO DO NAME"
+		policy_tec_egalitarian_ethic_desc:0 "TO DO DESC"
+
+		policy_option_tec_egalitarian_a_name:0 "A"
+		policy_option_tec_egalitarian_a_flag:0 "A"
+		policy_option_tec_egalitarian_a_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		#- Authoritarian
 		#	> Monthly influence +0.5/+1
-		TEC_ETHIC_AUTHORITARIAN_POLICY:0 "§EPolicy Bonus:§! has access to the £political_power£ §HEnforced Overseeing§! Policy, giving a higher degree of population control focuses"
+		TEC_ETHIC_AUTHORITARIAN_POLICY:0 "§EPolicy Bonus:§! has access to the £political_power£ §HEnforced Overseeing§! Policy, giving a higher degree of population enforcement focuses"
+
+		policy_tec_authoritarian_control:0 "TO DO NAME"
+		policy_tec_authoritarian_control_desc:0 "TO DO DESC"
+
+		policy_option_tec_authoritarian_lenient_name:0 "A"
+		policy_option_tec_authoritarian_lenient_flag:0 "A"
+		policy_option_tec_authoritarian_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_authoritarian_standard_name:0 "A"
+		policy_option_tec_authoritarian_standard_flag:0 "A"
+		policy_option_tec_authoritarian_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_authoritarian_oppressive_name:0 "A"
+		policy_option_tec_authoritarian_oppressive_flag:0 "A"
+		policy_option_tec_authoritarian_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		#- Militarist
 		#	> Power projection +25-50%
@@ -96,9 +118,39 @@
 		#	> +5/10 stability
 		TEC_ETHIC_PACIFIST_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HTO DO§! Policy, allowing a better control of cultural and societal development\n\n"
 
+		policy_tec_pacifist_control:0 "TO DO NAME"
+		policy_tec_pacifist_control_desc:0 "TO DO DESC"
+
+		policy_option_tec_pacifist_lenient_name:0 "A"
+		policy_flag_tec_pacifist_lenient:0 "A"
+		policy_option_tec_pacifist_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_pacifist_standard_name:0 "A"
+		policy_option_tec_pacifist_standard_flag:0 "A"
+		policy_option_tec_pacifist_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_pacifist_oppressive_name:0 "A"
+		policy_option_tec_pacifist_oppressive_flag:0 "A"
+		policy_option_tec_pacifist_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
+
 		#- Xenophobe
 		#	> +5%-10% main species pop output
 		TEC_ETHIC_XENOPHOBE_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HTO DO§! Policy, allowing a better control of the empire identity and frontier protection\n\n"
+
+		policy_tec_xenophobe_control:0 "TO DO NAME"
+		policy_tec_xenophobe_control_desc:0 "TO DO DESC"
+
+		policy_option_tec_xenophobe_lenient_name:0 "A"
+		policy_option_tec_xenophobe_lenient_flag:0 "A"
+		policy_option_tec_xenophobe_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_xenophobe_standard_name:0 "A"
+		policy_option_tec_xenophobe_standard_flag:0 "A"
+		policy_option_tec_xenophobe_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_xenophobe_oppressive_name:0 "A"
+		policy_option_tec_xenophobe_oppressive_flag:0 "A"
+		policy_option_tec_xenophobe_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		#- Xenophile
 		#	> Add: can host gestalt pops
@@ -106,25 +158,100 @@
 		#	> Envoys +1+2
 		TEC_ETHIC_XENOPHILE_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HOpen Frontiers§! Policy, allowing a better control of planet and species immigration\n\n"
 
+		policy_tec_xenophile_control:0 "TO DO NAME"
+		policy_tec_xenophile_control_desc:0 "TO DO DESC"
+
+		policy_option_tec_xenophile_lenient_name:0 "A"
+		policy_option_tec_xenophile_lenient_flag:0 "A"
+		policy_option_tec_xenophile_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_xenophile_standard_name:0 "A"
+		policy_option_tec_xenophile_standard_flag:0 "A"
+		policy_option_tec_xenophile_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_xenophile_oppressive_name:0 "A"
+		policy_option_tec_xenophile_oppressive_flag:0 "A"
+		policy_option_tec_xenophile_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
+
 		#- Competitive
 		#	> +10-20% Trade value
 		#	> Upgraded entepreneur buildings?
 		TEC_ETHIC_COMPETITIVE_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HTO DO§! Policy, TO DO\n\n"
+
+		policy_tec_competitive_control:0 "TO DO NAME"
+		policy_tec_competitive_control_desc:0 "TO DO DESC"
+
+		policy_option_tec_competitive_lenient_name:0 "A"
+		policy_option_tec_competitive_lenient_flag:0 "A"
+		policy_option_tec_competitive_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_competitive_standard_name:0 "A"
+		policy_option_tec_competitive_standard_flag:0 "A"
+		policy_option_tec_competitive_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_competitive_oppressive_name:0 "A"
+		policy_option_tec_competitive_oppressive_flag:0 "A"
+		policy_option_tec_competitive_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		#- Cooperative
 		#	> Remove pop housing usage
 		#	> Add "unemployed" state workers
 		TEC_ETHIC_COOPERATIVE_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HCooperative Employment§! Policy, avoiding unemployment by generating state workers of different type\n\n"
 
+		policy_tec_cooperative_control:0 "TO DO NAME"
+		policy_tec_cooperative_control_desc:0 "TO DO DESC"
+
+		policy_option_tec_cooperative_lenient_name:0 "A"
+		policy_option_tec_cooperative_lenient_flag:0 "A"
+		policy_option_tec_cooperative_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_cooperative_standard_name:0 "A"
+		policy_option_tec_cooperative_standard_flag:0 "A"
+		policy_option_tec_cooperative_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_cooperative_oppressive_name:0 "A"
+		policy_option_tec_cooperative_oppressive_flag:0 "A"
+		policy_option_tec_cooperative_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
+
 		#- Elitist
 		#	> Good as it is, i think
 		# +5%-10% specialist output
 		TEC_ETHIC_ELITIST_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HTO DO§! Policy, TO DO\n\n"
 
+		policy_tec_elitist_control:0 "TO DO NAME"
+		policy_tec_elitist_control_desc:0 "TO DO DESC"
+
+		policy_option_tec_elitist_lenient_name:0 "A"
+		policy_option_tec_elitist_lenient_flag:0 "A"
+		policy_option_tec_elitist_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_elitist_standard_name:0 "A"
+		policy_option_tec_elitist_standard_flag:0 "A"
+		policy_option_tec_elitist_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_elitist_oppressive_name:0 "A"
+		policy_option_tec_elitist_oppressive_flag:0 "A"
+		policy_option_tec_elitist_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
+
 		#- Pluralist
 		#	> Rename
 		#	> Rework leader experience gain into xp per year per leader
 		TEC_ETHIC_PLURALIST_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HTO DO§! Policy, TO DO\n\n"
+
+		policy_tec_pluralist_control:0 "TO DO NAME"
+		policy_tec_pluralist_control_desc:0 "TO DO DESC"
+
+		policy_option_tec_pluralist_lenient_name:0 "A"
+		policy_option_tec_pluralist_lenient_flag:0 "A"
+		policy_option_tec_pluralist_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_pluralist_standard_name:0 "A"
+		policy_option_tec_pluralist_standard_flag:0 "A"
+		policy_option_tec_pluralist_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_pluralist_oppressive_name:0 "A"
+		policy_option_tec_pluralist_oppressive_flag:0 "A"
+		policy_option_tec_pluralist_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		#- Materialist
 		#	> Remove upkeep from jobs
@@ -145,11 +272,41 @@
 		# -10-20% building cost
 		TEC_ETHIC_INDUSTRIALIST_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HUnstoppable Progress§! Policy, TO DO\n\n"
 
+		policy_tec_industrialist_control:0 "TO DO NAME"
+		policy_tec_industrialist_control_desc:0 "TO DO DESC"
+
+		policy_option_tec_industrialist_lenient_name:0 "A"
+		policy_option_tec_industrialist_lenient_flag:0 "A"
+		policy_option_tec_industrialist_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_industrialist_standard_name:0 "A"
+		policy_option_tec_industrialist_standard_flag:0 "A"
+		policy_option_tec_industrialist_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_industrialist_oppressive_name:0 "A"
+		policy_option_tec_industrialist_oppressive_flag:0 "A"
+		policy_option_tec_industrialist_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
+
 		#- Ecologist
 		#	> Remove consumer goods upkeep
 		#	> Add policy for recycling
 		# -10-20% building upkeep
 		TEC_ETHIC_ECOLOGIST_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HEcological Synchrony§! Policy, TO DO\n\n"
+
+		policy_tec_ecologist_control:0 "TO DO NAME"
+		policy_tec_ecologist_control_desc:0 "TO DO DESC"
+
+		policy_option_tec_ecologist_lenient_name:0 "A"
+		policy_option_tec_ecologist_lenient_flag:0 "A"
+		policy_option_tec_ecologist_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_ecologist_standard_name:0 "A"
+		policy_option_tec_ecologist_standard_flag:0 "A"
+		policy_option_tec_ecologist_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+
+		policy_option_tec_ecologist_oppressive_name:0 "A"
+		policy_option_tec_ecologist_oppressive_flag:0 "A"
+		policy_option_tec_ecologist_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		#GESTALT:
 		#- Apathy
