--- a/localisation/english/replace/!_evolved_to_do_R8_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R8_l_english.yml
@@ -2,6 +2,38 @@
 #R8 - ??? Patch
 
 # ------------------------------------------------- Civics
+# --------------- Origin
+	civic_tec_ascension_psionic:0 "Everexpanding Minds"
+	civic_tec_ascension_psionic_desc:0 "TO DO"
+	civic_tec_ascension_psionic_tooltip:0 "§EInitial $ap_tec_psionic_ascendance$ Civic§!\n\nTO DO"
+
+	civic_tec_ascension_psychic:0 "Everexpanding Minds"
+	civic_tec_ascension_psychic_desc:0 "TO DO"
+	civic_tec_ascension_psychic_tooltip:0 "§EInitial $ap_tec_psionic_ascendance$ Civic§!\n\nTO DO"
+
+	civic_tec_bioshapers_fleshcrafters:0 "Flesh Architects"
+	civic_tec_bioshapers_fleshcrafters_desc:0 "TO DO"
+	civic_tec_bioshapers_fleshcrafters_tooltip:0 "TO DO"
+
+	civic_tec_ascension_genetic:0 "Attempted Perfection"
+	civic_tec_ascension_genetic_desc:0 "TO DO"
+	civic_tec_ascension_genetic_tooltip:0 "§EInitial $ap_tec_genetic_perfection$ Civic§!\n\nTO DO"
+
+	civic_tec_ascension_biological:0 "Mutagenic Biology"
+	civic_tec_ascension_biological_desc:0 "TO DO"
+	civic_tec_ascension_biological_tooltip:0 "§EInitial $ap_tec_biological_2$ Civic§!\n\nTO DO"
+
+	civic_tec_ascension_cybernetic:0 "Premature Augmentation"
+	civic_tec_ascension_cybernetic_desc:0 "TO DO"
+	civic_tec_ascension_cybernetic_tooltip:0 "§EInitial $ap_tec_cybernetic_revolution$ Civic§!\n\nTO DO"
+
+	civic_tec_ascension_synthetic:0 "Precocious Transubstantiation"
+	civic_tec_ascension_synthetic_desc:0 "TO DO"
+	civic_tec_ascension_synthetic_tooltip:0 "§EInitial $ap_synthetic_evolution$ Civic§!\n\nTO DO"
+
+	civic_tec_ascension_replicants:0 "Transorganic Inventive"
+	civic_tec_ascension_replicants_desc:0 "TO DO"
+	civic_tec_ascension_replicants_tooltip:0 "§EInitial $ap_tec_replicant$ Ascension Civic§!\n\nTO DO"
 # --------------- Regular
 	# Diet rogue servitors
 	civic_tec_artificial_servitors:0 "Artificial Servitors"
